# ciborium

./: Cargo.toml
cbor/: Cargo.toml
cbor/src/: lib.rs
cbor/src/de/: error.rs  mod.rs
cbor/src/pull/: decoder.rs  mod.rs
cbor/src/push/: encoder.rs  mod.rs
cbor/src/ser/: error.rs  mod.rs  mode.rs
cbor/src/ser/collection/: map.rs  mod.rs  seq.rs  struct.rs  struct_variant.rs  tuple.rs  tuple_struct.rs  tuple_variant.rs
cbor/src/types/: indefinite.rs  mod.rs  null.rs  simple.rs  tag.rs  undefined.rs
cbor/tests/: canonical.rs  codec.rs  error.rs  fuzz.rs  indef.rs  no_std.rs  recursion.rs  ser_smoke.rs  tag.rs
ciborium/: Cargo.toml
ciborium-atom/: Cargo.toml  README.md
ciborium-atom/fuzz/: .gitignore  Cargo.toml
ciborium-atom/fuzz/fuzz_targets/: decode.rs  roundtrip.rs
ciborium-atom/src/: error.rs  lib.rs
ciborium-atom/src/atom/: float.rs  head.rs  mod.rs  other.rs  short.rs  simple.rs  unsigned.rs
ciborium-atom/src/input/: mod.rs  read.rs  slice.rs  span.rs
ciborium-atom/src/output/: mod.rs  slice.rs  vec.rs  write.rs
ciborium-atom/tests/: codec.rs  input.rs  reader.rs
ciborium/src/: indef.rs  lib.rs
ciborium/src/ser/: mod.rs
ciborium/tests/: indef.rs
src/ser/: mod.rs
