[package]
name = "ciborium-atom"
version = "0.1.0"
authors = ["Nathaniel McCallum <nathaniel@mccallum.life>"]
license = "Apache-2.0"
edition = "2021"
homepage = "https://github.com/enarx/ciborium"
repository = "https://github.com/enarx/ciborium"
description = "CBOR atomic wire types"
readme = "README.md"
keywords = ["cbor"]
categories = ["data-structures", "embedded", "encoding", "no-std", "parsing"]
rust-version = "1.85"

[badges]
github = { repository = "enarx/ciborium", workflow = "test" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/ciborium" }
is-it-maintained-open-issues = { repository = "enarx/ciborium" }

[dependencies]
floats = { version = "0.2", features = ["casting"] }
flex = "0.2"

[features]
default = ["alloc"]
alloc = ["flex/alloc"]
std = ["alloc"]

[dev-dependencies]
hex = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
